--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "model3dbc"]
 	path = model3dbc
 	url = https://github.com/joshwardell/model3dbc.git
+[submodule "DBCTools"]
+	path = DBCTools
+	url = https://github.com/thezim/DBCTools.git
